--- a/Ch03/index.html
+++ b/Ch03/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../Ch03/styles/styles.css">
+    <title>Ch03</title>
 </head>
 <body>
-    <img src="../Ch03/images/anh.gif" alt="anhcuatui">
+    <img src="../Ch03/images/favicon.ico" alt="">
     <h1>San joaquin Valley Town Hall</h1>
     <h2>Bringing ctting-edge speakers to the valley</h2>
-    <h2>2011-2012 guest speakers</h2>
+    <h1>This season's guest speakers</h1>
     <ul>
         <li>October 19, 2011: <a href="">jeffiey Toobin</a></li>
         <li>November 16, 2011: <a href="">Andrew Ross Sorkin</a></li>
@@ -18,6 +19,13 @@
         <li>March 21, 2012: <a href="">Carlos Eire</a></li>
         <li>April 18, 2012: <a href="">Ronan Tynan</a></li>
     </ul>
+    <h2>Looking for a unique gift?</h2>
+    <p>Town Hall has the answer. For only $100, you can get 
+        a book of tickets for all of the remaining speakers. And the bargain includes a 
+        second book of tickets for a companion.</p>
+    <p class="indent">Or, for $50, you can give yourself the gift of our speakers, and still get an extra
+            ticket for a companion, but for just one of the events.</p>
+    <p class="indent">See you at the next show?</p>    
     <p><em>Contact us by phone </em>at (559)555-1212 for ticket information</p>
     <p>&copy; Copyright 2012 San Joaquin Valley Town Hall</p>
 </body>
