--- a/Ch03/index.html
+++ b/Ch03/index.html
@@ -7,26 +7,32 @@
     <title>Ch03</title>
 </head>
 <body>
-    <img src="../Ch03/images/favicon.ico" alt="">
-    <h1>San joaquin Valley Town Hall</h1>
-    <h2>Bringing ctting-edge speakers to the valley</h2>
-    <h1>This season's guest speakers</h1>
-    <ul>
-        <li>October 19, 2011: <a href="">jeffiey Toobin</a></li>
-        <li>November 16, 2011: <a href="">Andrew Ross Sorkin</a></li>
-        <li>January 18, 2012: <a href="">Amy Chua</a></li>
-        <li>February 15, 2012: <a href="">Scott Sampson</a></li>
-        <li>March 21, 2012: <a href="">Carlos Eire</a></li>
-        <li>April 18, 2012: <a href="">Ronan Tynan</a></li>
-    </ul>
-    <h2>Looking for a unique gift?</h2>
-    <p>Town Hall has the answer. For only $100, you can get 
-        a book of tickets for all of the remaining speakers. And the bargain includes a 
-        second book of tickets for a companion.</p>
-    <p class="indent">Or, for $50, you can give yourself the gift of our speakers, and still get an extra
-            ticket for a companion, but for just one of the events.</p>
-    <p class="indent">See you at the next show?</p>    
-    <p><em>Contact us by phone </em>at (559)555-1212 for ticket information</p>
-    <p>&copy; Copyright 2012 San Joaquin Valley Town Hall</p>
+    <div class="header">
+        <img src="../Ch03/images/favicon.ico" alt="" width="80px">
+        <h1>San joaquin Valley Town Hall</h1>
+        <h2>Bringing ctting-edge speakers to the valley</h2>
+    </div>
+    <div class="main">
+        <h1>This season's guest speakers</h1>
+        <ul>
+            <li>October 19, 2011: <a class="date_passed" href="">jeffiey Toobin</a></li>
+            <li>November 16, 2011: <a class="date_passed" href="">Andrew Ross Sorkin</a></li>
+            <li>January 18, 2012: <a class="date" href="">Amy Chua</a></li>
+            <li>February 15, 2012: <a class="date"  href="">Scott Sampson</a></li>
+            <li>March 21, 2012: <a class="date"  href="">Carlos Eire</a></li>
+            <li>April 18, 2012: <a class="date"  href="">Ronan Tynan</a></li>
+        </ul>
+        <h2>Looking for a unique gift?</h2>
+        <p>Town Hall has the answer. For only $100, you can get 
+            a book of tickets for all of the remaining speakers. And the bargain includes a 
+            second book of tickets for a companion.</p>
+        <p class="indent">Or, for $50, you can give yourself the gift of our speakers, and still get an extra
+                ticket for a companion, but for just one of the events.</p>
+        <p class="indent">See you at the next show?</p>    
+        <p id="contact_us"><strong><em>Contact us by phone </em></strong>at (559)555-1212 for ticket information</p>
+    </div>
+    <footer>
+        <p>&copy; Copyright 2012 San Joaquin Valley Town Hall</p>
+    </footer>  
 </body>
 </html>
