--- a/Ch03/index.html
+++ b/Ch03/index.html
@@ -3,15 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Ch03/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <title>Ch03</title>
 </head>
 <body>
     <div class="header">
-        <img src="../Ch03/images/favicon.ico" alt="" width="80px">
+        <img src="./images/favicon.ico" alt="" width="80px">
         <h1>San joaquin Valley Town Hall</h1>
         <h2>Bringing ctting-edge speakers to the valley</h2>
     </div>
+    <aside>
+        <h2>Lecture notes</h2>
+        <h3>Event change for November</h3>
+        <p>
+          SJV Town Hall is pleased to announce the addition of award-winning author Andrew Ross Sorkin. The appearance
+          of previously scheduled speaker, Greg Mortenson, has been postponed.
+        </p>
+
+        <h3>Lecture day, time, and location</h3>
+        <p>
+          All one-hour lectures are on the second Wednesday of the month beginning at 10:30 a.m. at William Saroyan
+          Theatre, 700 M Street, Fresno, CA.
+        </p>
+    </aside>
     <div class="main">
         <h1>This season's guest speakers</h1>
         <ul>
@@ -34,5 +48,6 @@
     <footer>
         <p>&copy; Copyright 2012 San Joaquin Valley Town Hall</p>
     </footer>  
+
 </body>
 </html>
