--- a/Ch09_Exercise/text/index.html
+++ b/Ch09_Exercise/text/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../images/img.gif" />
+    <link rel="shortcut icon" href="../images/anh.gif" />
     <link rel="stylesheet" href="../styles/normalize.css">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="stylesheet" href="../plugin/SlickNav/slicknav.css">
